update launch configuration for testing; refactor buffer descriptor logging and remove unused test file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "lldb",
       "request": "launch",
       "name": "Debug",
-      "program": "${workspaceFolder}/main",
+      "program": "${workspaceFolder}/test/main",
       "args": [],
       "cwd": "${workspaceFolder}"
     }
